resources/QuerySets_logs.txt
Windows PowerShell
Copyright (C) 2016 Microsoft Corporation. All rights reserved.

PS C:\Users\Admin> cd..
PS C:\Users> cd..
PS C:\> python manage.py shell
C:\Program Files (x86)\Python35-32\python.exe: can't open file 'manage.py': [Errno 2] No such file or directory
PS C:\> cd .\projects\
PS C:\projects> cd .\GreatPianoService\
PS C:\projects\GreatPianoService> CD .\PianoService\
PS C:\projects\GreatPianoService\PianoService> cd..
PS C:\projects\GreatPianoService> .\PianoService\Scripts\Activate.ps1
(PianoService) PS C:\projects\GreatPianoService> cd .\GreatPSproj\
(PianoService) PS C:\projects\GreatPianoService\GreatPSproj> python manage.py shell
Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 25 2016, 22:01:18) [MSC v.1900 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from GreatPSproj.models import Piano
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: No module named 'GreatPSproj.models'
>>> from GreatPSproj.models import Piano
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: No module named 'GreatPSproj.models'
>>> from GreatPSproj.models import piano
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: No module named 'GreatPSproj.models'
>>> from GreatPSproj.models import Piano
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: No module named 'GreatPSproj.models'
>>> from GreatPSapp.models import Piano
>>> Piano.objects.all()
<QuerySet [<Piano: Piano object>, <Piano: Piano object>, <Piano: Piano object>, <Piano: Piano object>]>
>>> Piano.objects.all()[0]
<Piano: Piano object>
>>> p = Piano.objects.all()[0]
>>> p.make
'Bush & Lane'
>>> p.model
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Piano' object has no attribute 'model'
>>> p.make
'Bush & Lane'
>>> p.size
"5'"
>>> p.size.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'str' object has no attribute 'all'
>>> p.size.all
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'str' object has no attribute 'all'
>>> p.client
<User: jatnn5@gmail.com>
>>> p.client
<User: jatnn5@gmail.com>
>>> p.service
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Piano' object has no attribute 'service'
>>> p.service_request
>>> p.serial_number
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Piano' object has no attribute 'serial_number'
>>> p.serial_num
'726354789'
>>> User.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'User' is not defined
>>> from accountapp import User
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'User'
>>> from accountapp import Users
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'Users'
>>> from accountapp.models import User
>>> User.objects.all()
<QuerySet [<User: davispcsolutions@gmail.com>, <User: jtd1863@gmail.com>, <User: davispcsolutions@gmail.com>, <User: jatnn5@gmail.com>, <User: jatnn5
@gmail.com>, <User: wally@wally.com>, <User: naomi@herhouse.com>, <User: joy@overlin.us>]>
>>> User.objects.all()
<QuerySet [<User: davispcsolutions@gmail.com>, <User: jtd1863@gmail.com>, <User: davispcsolutions@gmail.com>, <User: jatnn5@gmail.com>, <User: jatnn5
@gmail.com>, <User: wally@wally.com>, <User: naomi@herhouse.com>, <User: joy@overlin.us>]>
>>> users = User.objects.all()
>>> users.j
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'QuerySet' object has no attribute 'j'
>>> users.count()
8
>>> user.values()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'user' is not defined
>>> user.values()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'user' is not defined
>>> users.values
<bound method QuerySet.values of <QuerySet [<User: davispcsolutions@gmail.com>, <User: jtd1863@gmail.com>, <User: davispcsolutions@gmail.com>, <User:
 jatnn5@gmail.com>, <User: jatnn5@gmail.com>, <User: wally@wally.com>, <User: naomi@herhouse.com>, <User: joy@overlin.us>]>>
>>> users.phone
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'QuerySet' object has no attribute 'phone'
>>> users.username
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'QuerySet' object has no attribute 'username'
>>> urers.filter()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'urers' is not defined
>>> urers.filter
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'urers' is not defined
>>> users.filter
<bound method QuerySet.filter of <QuerySet [<User: davispcsolutions@gmail.com>, <User: jtd1863@gmail.com>, <User: davispcsolutions@gmail.com>, <User:
 jatnn5@gmail.com>, <User: jatnn5@gmail.com>, <User: wally@wally.com>, <User: naomi@herhouse.com>, <User: joy@overlin.us>]>>
>>> users.filter last_serviced
  File "<console>", line 1
    users.filter last_serviced
                             ^
SyntaxError: invalid syntax
>>> users.filter last_service
  File "<console>", line 1
    users.filter last_service
                            ^
SyntaxError: invalid syntax
>>> from GreatPSapp.models import Piano
>>> Piano.last_serviced
<django.db.models.query_utils.DeferredAttribute object at 0x04A35150>
>>> Piano.make
<django.db.models.query_utils.DeferredAttribute object at 0x04A32CD0>
>>> Piano.make()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
TypeError: 'DeferredAttribute' object is not callable
>>>